Zmiana 'O mnie' na 'O nas' i dostosowanie tekstów do liczby mnogiej

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="#gallery">Portfolio</a></li>
                     <li><a href="#inspiracje">Inspiracje</a></li>
                     <li><a href="#artykuly">Artykuły</a></li>
-                    <li><a href="#about">O Mnie</a></li>
+                    <li><a href="#about">O Nas</a></li>
                     <li><a href="#kontakt">Kontakt</a></li>
                 </ul>
                 <button class="mobile-menu-btn" aria-label="Otwórz menu mobilne" aria-expanded="false" aria-controls="mobile-nav">☰</button>
@@ -41,7 +41,7 @@
             <li><a href="#gallery">Portfolio</a></li>
             <li><a href="#inspiracje">Inspiracje</a></li>
             <li><a href="#artykuly">Artykuły</a></li>
-            <li><a href="#about">O Mnie</a></li>
+            <li><a href="#about">O Nas</a></li>
             <li><a href="#kontakt">Kontakt</a></li>
         </ul>
     </div>
@@ -50,8 +50,8 @@
     <section class="hero" aria-labelledby="hero-title">
         <div class="hero-bg" aria-hidden="true"></div>
         <div class="hero-content">
-            <h1 id="hero-title">Moje Fotograficzne Portfolio</h1>
-            <p>Uchwyć moment, zachowaj wspomnienie. Odkryj moje najlepsze prace fotograficzne.</p>
+            <h1 id="hero-title">Nasze Fotograficzne Portfolio</h1>
+            <p>Uchwyć moment, zachowaj wspomnienie. Odkryj nasze najlepsze prace fotograficzne.</p>
             <a href="#gallery" class="btn">Zobacz Portfolio</a>
         </div>
     </section>
@@ -59,7 +59,7 @@
     <!-- Sekcja galerii -->
     <section id="gallery" class="gallery" aria-labelledby="gallery-title">
         <div class="container">
-            <h2 id="gallery-title">Moje Prace</h2>
+            <h2 id="gallery-title">Nasze Prace</h2>
 
             <div class="filter-buttons" role="group" aria-label="Filtry galerii">
                 <button class="filter-btn active" data-filter="wszystkie" aria-pressed="true">Wszystkie</button>
@@ -262,18 +262,18 @@
         </div>
     </section>
 
-    <!-- Sekcja O Mnie -->
+    <!-- Sekcja O Nas -->
     <section id="about" class="about" aria-labelledby="about-title">
         <div class="container">
-            <h2 id="about-title">O Mnie</h2>
+            <h2 id="about-title">O Nas</h2>
             <div class="about-content">
                 <div class="about-image">
                     <img src="img/p1.jpeg" alt="Fotograf podczas pracy">
                 </div>
                 <div class="about-text">
-                    <h3>Kim Jestem?</h3>
-                    <p>Pasjonatem fotografii z wieloletnim doświadczeniem w różnych dziedzinach. Moja praca to nie tylko robienie zdjęć, ale opowiadanie historii poprzez obrazy. Każda fotografia jest dla mnie unikalnym sposobem na uchwycenie emocji, momentu i piękna otaczającego nas świata.</p>
-                    <p>Specjalizuję się w portretach, fotografii krajobrazowej i architektonicznej, ale jestem otwarty na nowe wyzwania i projekty. Moim celem jest dostarczanie klientom zdjęć najwyższej jakości, które będą cenną pamiątką na lata.</p>
+                    <h3>Kim Jesteśmy?</h3>
+                    <p>Pasjonatami fotografii z wieloletnim doświadczeniem w różnych dziedzinach. Nasza praca to nie tylko robienie zdjęć, ale opowiadanie historii poprzez obrazy. Każda fotografia jest dla nas unikalnym sposobem na uchwycenie emocji, momentu i piękna otaczającego nas świata.</p>
+                    <p>Specjalizujemy się w portretach, fotografii krajobrazowej i architektonicznej, ale jesteśmy otwarci na nowe wyzwania i projekty. Naszym celem jest dostarczanie klientom zdjęć najwyższej jakości, które będą cenną pamiątką na lata.</p>
                     <a href="https://pikpodlaskie.pl/dzialalnosc/zespoly/foto-spoldzielnia/" class="btn" target="_blank" rel="noopener noreferrer">Dowiedz się więcej</a>
                 </div>
             </div>
@@ -285,11 +285,11 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>O Mnie</h3>
-                    <p>Profesjonalny fotograf z pasją do tworzenia niezapomnianych obrazów.</p>
+                    <h3>O Nas</h3>
+                    <p>Profesjonalni fotografowie z pasją do tworzenia niezapomnianych obrazów.</p>
                     <div class="social-links">
-                        <a href="#" class="social-icon" aria-label="Facebook - otwórz w nowej karcie" target="_blank" rel="noopener noreferrer">FB</a>
-                        <a href="#" class="social-icon" aria-label="Instagram - otwórz w nowej karcie" target="_blank" rel="noopener noreferrer">IN</a>
+                        <a href="https://facebook.com/fotospoldzielnia" class="social-link" aria-label="Facebook - otwórz w nowej karcie" target="_blank" rel="noopener noreferrer">Facebook</a>
+                        <a href="https://instagram.com/kamila.butkiewicz.fotografia/" class="social-link" aria-label="Instagram - otwórz w nowej karcie" target="_blank" rel="noopener noreferrer">Instagram</a>
                     </div>
                 </div>
                 <div class="footer-column">
@@ -298,16 +298,18 @@
                     <a href="#gallery">Portfolio</a>
                     <a href="#inspiracje">Inspiracje</a>
                     <a href="#artykuly">Artykuły</a>
-                    <a href="#about">O Mnie</a>
+                    <a href="#about">O Nas</a>
                 </div>
                 <div class="footer-column">
                     <h3>Kontakt</h3>
-                    <p>Email: <a href="mailto:twoj@email.com">twoj@email.com</a></p>
+                    <p>Email:</p>
+                    <p><a href="mailto:kamila.butkiewicz@gmail.com">kamila.butkiewicz@gmail.com</a></p>
+                    <p><a href="mailto:damian.szymansky@gmail.com">damian.szymansky@gmail.com</a></p>
                     <p>Telefon: <a href="tel:+48123456789">+48 123 456 789</a></p>
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 Moje Portfolio Fotograficzne. Wszelkie prawa zastrzeżone.</p>
+                <p>&copy; 2025 Nasze Portfolio Fotograficzne. Wszelkie prawa zastrzeżone.</p>
             </div>
         </div>
     </footer>
