Zmiana nazwy 'swiatlocien' na 'Światłocień' z polskimi znakami

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Portfolio fotograficzne Światłocień - profesjonalne sesje zdjęciowe, fotografia portretowa, krajobrazowa i architektoniczna">
     <meta name="keywords" content="fotografia, portfolio, zdjęcia, portrety, krajobraz, architektura, natura">
     <meta name="author" content="Światłocień">
-    <title>Swiatlocien - Portfolio Fotograficzne</title>
+    <title>Światłocień - Portfolio Fotograficzne</title>
     <!-- Główny plik stylu -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Favicon -->
@@ -18,7 +18,7 @@
     <header role="banner">
         <div class="container">
             <nav role="navigation" aria-label="Główne menu">
-                <a href="#" class="logo" aria-label="Strona główna - Światłocień">Swiatlo<span>cien</span></a>
+                <a href="#" class="logo" aria-label="Strona główna - Światłocień">Światło<span>cień</span></a>
                 <ul class="nav-links">
                     <li><a href="#" aria-current="page">Strona Główna</a></li>
                     <li><a href="#gallery">Portfolio</a></li>
