--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Strona nie znaleziona | Swiatlocien</title>
+    <title>404 - Strona nie znaleziona | Światłocień</title>
     <link rel="stylesheet" href="css/style.css">
     <style>
         .error-container {
