Update: Zmodyfikowano tło hero, style stopki i podkreślenie nagłówka

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- Sekcja hero -->
     <section class="hero" aria-labelledby="hero-title">
-        <div class="hero-bg" aria-hidden="true"></div>
+        <img src="img/hero-bg.jpg" alt="Tło strony głównej" class="hero-bg">
         <div class="hero-content">
             <h1 id="hero-title">Nasze Fotograficzne Portfolio</h1>
             <p>Uchwyć moment, zachowaj wspomnienie. Odkryj nasze najlepsze prace fotograficzne.</p>
